[package]
name = "loki-syntax"
version = "0.1.0"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loki-errors={path="../loki-errors"}

[dev-dependencies]
insta = "0.8.2"
pretty_assertions = "0.6.1"